--- a/app/imports/ui/pages/home-page.html
+++ b/app/imports/ui/pages/home-page.html
@@ -1,14 +1,44 @@
 <template name="Home_Page">
-  <div class="ui middle aligned centered grid text container">
+  <div class="ui container">
 
-    <div class="four wide column">
-      <img class="ui small circular image" src="/images/meteor-logo.png"/>
-    </div>
-
-    <div class="eight wide column">
-      <h1>Welcome to this template</h1>
-      <p>Now get to work and modify this app!</p>
-    </div>
+    <table style="margin-top: 20px" class="ui celled table">
+      <thead>
+      <tr><th>First</th>
+        <th>Last</th>
+        <th>Address</th>
+        <th>Phone</th>
+        <th>Email</th>
+      </tr></thead>
+      <tbody>
+      <tr>
+        <td>
+          Tony
+        </td>
+        <td>Kuloloia</td>
+        <td>95-997 Ukuwai Street, Mililani, HI</td>
+        <td>808-366-9157</td>
+        <td>akuloloi@hawaii.edu</td>
+      </tr>
+      <tr>
+        <td>
+          Henri
+        </td>
+        <td>Casanova</td>
+        <td>168 East-West Rd., Honolulu, HI</td>
+        <td>808-956-2649</td>
+        <td>henric@hawaii</td>
+      </tr>
+      <tr>
+        <td>
+          Kim
+        </td>
+        <td>Binsted</td>
+        <td>168 East-West Rd., Honolulu, HI</td>
+        <td>808-956-6107</td>
+        <td>binsted@hawaii</td>
+      </tr>
+      </tbody>
+      </table>
 
   </div>
 </template>
