--- a/app/imports/ui/pages/home-page.html
+++ b/app/imports/ui/pages/home-page.html
@@ -1,44 +1,33 @@
 <template name="Home_Page">
   <div class="ui container">
 
+    {{#if Template.subscriptionsReady}}
     <table style="margin-top: 20px" class="ui celled table">
       <thead>
-      <tr><th>First</th>
+      <tr>
+        <th>First</th>
         <th>Last</th>
         <th>Address</th>
         <th>Phone</th>
         <th>Email</th>
-      </tr></thead>
+      </tr>
+      </thead>
+
       <tbody>
+      {{#each contact in ContactsList}}
       <tr>
-        <td>
-          Tony
-        </td>
-        <td>Kuloloia</td>
-        <td>95-997 Ukuwai Street, Mililani, HI</td>
-        <td>808-366-9157</td>
-        <td>akuloloi@hawaii.edu</td>
+        <td>{{contact.first}}</td>
+        <td>{{contact.last}}</td>
+        <td>{{contact.address}}</td>
+        <td>{{contact.telephone}}</td>
+        <td>{{contact.email}}</td>
       </tr>
-      <tr>
-        <td>
-          Henri
-        </td>
-        <td>Casanova</td>
-        <td>168 East-West Rd., Honolulu, HI</td>
-        <td>808-956-2649</td>
-        <td>henric@hawaii</td>
-      </tr>
-      <tr>
-        <td>
-          Kim
-        </td>
-        <td>Binsted</td>
-        <td>168 East-West Rd., Honolulu, HI</td>
-        <td>808-956-6107</td>
-        <td>binsted@hawaii</td>
-      </tr>
+      {{/each}}
       </tbody>
-      </table>
+    </table>
+    {{else}}
+    {{> Loading}}
+    {{/if}}
 
   </div>
 </template>
