--- a/app/imports/ui/pages/edit-contact-page.html
+++ b/app/imports/ui/pages/edit-contact-page.html
@@ -59,6 +59,7 @@
         </div>
       </div>
       <button class="ui button" type="submit">Update</button>
+      <button class="ui button delete" type="click">Delete</button>
     </form>
   </div>
   {{ /if }}
